# proton-drive-client

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  test-decrypt.sh
.github/workflows/: ci.yaml
src/proton_drive_client/: __init__.py  __main__.py  client.py  crypto.py  password.py  pmhash.py  srp.py
tests/: test_password.py  test_pmhash.py  test_srp.py
