[project]
name = "proton-drive-client"
version = "0.1.0"
description = "Educational Proton Drive API client demonstrating SRP authentication and PGP encryption"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "bcrypt>=5.0.0",
    "cryptography>=43.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.5",
    "types-requests>=2.32.4.20260107",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proton_drive_client"]

[tool.ruff]
line-length = 80
target-version = "py313"

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH",
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true


[tool.pytest.ini_options]
testpaths = ["tests"]
